Mon Nov 12 2001  Vitezslav Samel <samel@mail.cz>
	* Makefile.am, deleted chain.asm, kbdhdl.c, kbdhdl.h, msscrn.c,
	mstty.c, termcap, terminfo: delete unused files from distribution

Mon Nov 12 2001  Peter Breitenlohner <peb@mppmu.mpg.de>
	* Makefile.am: make joe installable into another root dir
	with "make DESTDIR=/path/ install"

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* ufile.c: comment out unused functions (nask2()/uask2())

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* uedit.c: correct typo: utype(bw, c) --> utypebw(bw,c)
	I'm not 100% sure about this, but "works for me here"(tm)

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* termcap.c, termcap.h: correct prototype to the output routine
	the CAP structure (and setcap()/getcap() etc.)

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* regex.c, regex.h: change regex pointer to be 'unsigned char *regex'
	This kills some warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* cmd.c, menu.c, menu.h, rc.c, tab.c, ufile.c: use mkmenu(W *, ...)
	instead of mkmenu(BASE *, ...).
	This kills some warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* tw.c, w.h: non-code clean up

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* macro.c, qw.c, qw.h, tw.c, uedit.c, uisrch.c, usearch.c, ushell.c:
	use mkqw(W *, ...) instead of mkqw(BASE *, ...) (same applies to
	mkqwna() and mkqwnsr()).
	This kills a lot of warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* bw.c, cmd.c, macro.c, main.c, rc.c, tab.c, tw.c, ublock.c, uedit.c,
	uerror.c, ufile.c, umath.c, undo.c, usearch.c, ushell.c, utag.c, w.c,
	w.h: use msgnw[t](W *, char *) instead of msgnw[t](BASE *, char *).
	This kills a lot of warnings during build.

Sun Nov 11 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, blocks.c, blocks.h, scrn.c, termcap.c, undo.c, vfile.c, vs.c:
	use mfwrd() and mbkwd() only as internal functions to mmove().